# protocol

./: .gitignore  README.md  help.html  index.html  settings.html  src-files.js
dapps/: README.md
dapps/appender/: Cargo.toml  README.md
dapps/arbitrage/: Cargo.toml
dapps/archived/basset/: Cargo.toml
dapps/archived/old_dusk/: Cargo.toml  README.md
dapps/assets/: Cargo.toml  README.md
dapps/basset/: Cargo.toml  README.md
dapps/chihuahua/: Cargo.toml  README.md
dapps/convcls/: Cargo.toml  README.md
dapps/dawn/: Cargo.toml  README.md
dapps/distributed/: Cargo.toml  README.md
dapps/distributed/src/: main.rs
dapps/dusk/: Cargo.toml  README.md
dapps/dusk/src/: main.rs
dapps/hwaet/: Cargo.toml  README.md
dapps/offrian/: Cargo.toml  README.md
dapps/pools/: Cargo.toml  README.md
dapps/reinvested/: Cargo.toml  README.md
dapps/reinvested/src/: main.rs
dapps/urie/: Cargo.toml
dapps/urie/src/: main.rs
dapps/wyrd/: Cargo.toml  README.md
libs/: Cargo.toml  README.md
libs/src/: fetchers.rs  git.rs  lib.rs  main.rs  moon.rs  parsers.rs  paths.rs  processors.rs  reports.rs  tables.rs  types.rs  virtuals.rs
libs/src/collections/: assets.rs
libs/src/fetchers/: assets.rs  calls.rs  pivots.rs  pool_names.rs  quotes.rs  test_helpers.rs  utils.rs  wallets.rs  whitelist.rs
libs/src/fetchers/assets/: pool.rs  protocol.rs
libs/src/processors/: pivots.rs  pools.rs  proposals.rs  utils.rs  virtuals.rs
libs/src/types/: aliases.rs  assets.rs  blockchains.rs  calls.rs  coins.rs  comps.rs  gains.rs  headers.rs  measurable.rs  pivots.rs  pools.rs  proposals.rs  quotes.rs  tokens.rs  util.rs  wallets.rs
libs/src/types/assets/: amounts.rs  asset_types.rs  assets.rs
libs/src/types/calls/: call_data.rs  calls.rs
libs/src/types/headers/: aggregate_headers.rs  headers.rs
libs/src/types/pivots/: amounts.rs  asset_types.rs  assets.rs  closes.rs  header.rs  opens.rs  pivots.rs  utils.rs
libs/src/types/proposals/: aggregate_headers.rs  prop_assets.rs  proposes.rs
libs/src/types/tokens/: allocations.rs  coins.rs  moralis.rs
quizzes/: Cargo.toml  Makefile.toml  README.md
quizzes/data/: sample_avax_undead_open_pivots.tsv  sample_calls.csv  sample_new_close_btc_avax_pivot.tsv  sample_old_close_btc_undead_pivot.tsv
quizzes/data/sample_broken_dapp/broken/: Cargo.toml
quizzes/quiz00/: README.md
quizzes/quiz00/himom/: Cargo.toml
quizzes/quiz00/himom/src/: main.rs
quizzes/quiz00/testquiz00/: Cargo.toml
quizzes/quiz00/testquiz00/src/: main.rs
quizzes/quiz01/: README.md
quizzes/quiz01/a_read/: Cargo.toml  README.md
quizzes/quiz01/a_read/src/: main.rs
quizzes/quiz01/b_table/: Cargo.toml  README.md
quizzes/quiz01/b_table/src/: main.rs
quizzes/quiz01/pivots/: Cargo.toml  README.md
quizzes/quiz01/pivots/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
quizzes/quiz01/pivots/src/: lib.rs  paths.rs
quizzes/quiz02/: README.md
quizzes/quiz02/a_quotes/: Cargo.toml  README.md
quizzes/quiz02/a_quotes/src/: main.rs
quizzes/quiz02/b_compute_close/: Cargo.toml  README.md
quizzes/quiz02/b_compute_close/src/: main.rs
quizzes/quiz03/: README.md
quizzes/quiz03/a_partition/: Cargo.toml  README.md
quizzes/quiz03/a_partition/src/: main.rs
quizzes/quiz04/: README.md
quizzes/quiz04/a_git_json/: Cargo.toml  README.md
quizzes/quiz04/a_git_json/src/: main.rs
quizzes/quiz04/b_parse/: Cargo.toml  README.md
quizzes/quiz04/b_parse/src/: main.rs
quizzes/quiz04/c_iterate/: Cargo.toml  README.md
quizzes/quiz04/c_iterate/src/: main.rs
quizzes/quiz05/a_assets/: Cargo.toml  README.md
quizzes/quiz05/a_assets/src/: main.rs
quizzes/quiz06/: README.md
quizzes/quiz06/a_pool_table/: Cargo.toml  README.md
quizzes/quiz06/a_pool_table/src/: main.rs
quizzes/quiz06/b_pools/src/: main.rs
quizzes/quiz07/: README.md
quizzes/quiz07/a_ssets/: Cargo.toml  README.md
quizzes/quiz07/a_ssets/src/: main.rs
quizzes/quiz07/a_vailable_assets/: Cargo.toml  README.md
quizzes/quiz07/a_vailable_assets/src/: main.rs
quizzes/quiz07/b_virtual/: Cargo.toml  README.md
quizzes/quiz07/b_virtual/src/: main.rs
quizzes/quiz07/c_avail/: Cargo.toml
quizzes/quiz08/: README.md
quizzes/quiz08/a_table/: Cargo.toml  README.md
quizzes/quiz08/a_table/src/: main.rs
quizzes/src/: main.rs  quizzes.rs
quizzes/src/quiz00/: README.md
quizzes/src/quiz01/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz01/a_read/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz01/b_table/: Cargo.toml  mod.rs
quizzes/src/quiz01/src/: main.rs
quizzes/src/quiz02/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz02/a_quotes/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz02/b_compute_close/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz02/src/: main.rs
quizzes/src/quiz03/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz03/a_partition/: Cargo.toml  mod.rs
quizzes/src/quiz03/b_aggregate/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz03/src/: main.rs
quizzes/src/quiz04/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz04/a_git_json/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz04/b_parse/: README.md
quizzes/src/quiz04/c_iterate/: Cargo.toml  README.md
quizzes/src/quiz05/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz05/a_assets/: Cargo.toml  mod.rs
quizzes/src/quiz05/b_dusk_min/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz05/src/: main.rs
quizzes/src/quiz06/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz06/a_pool_table/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz06/b_pools/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz06/c_assets/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz06/src/: main.rs
quizzes/src/quiz07/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz07/a_ssets/: Cargo.toml  mod.rs
quizzes/src/quiz07/b_virtual/: Cargo.toml  mod.rs
quizzes/src/quiz07/c_open/: Cargo.toml  mod.rs
quizzes/src/quiz08/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz09/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz10/: Cargo.toml  README.md  mod.rs
quizzes/src/quiz11/: Cargo.toml  README.md  mod.rs
(+151 files in other folders)
