[package]
name = "libs"
version = "0.1.0"
edition = "2024"

[lib]
name = "libs"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

book = { path = "../../crypto-n-rust/src/libs/book" }

