[package]
name = "libs"
version = "0.1.0"
edition = "2024"

[lib]
name = "libs"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
csv = "1.0"
paste = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

book = { path = "../../crypto-n-rust/src/libs/book" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tarpaulin_include)']
