[package]
name = "quizzes"
version = "0.1.0"
edition = "2024"

[lib]
name = "quizzes"
path = "src/quizzes.rs"

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
chrono = "0.4.38"
csv = "1.0"
futures = "0.3.31"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
libs = { path = "../libs" }
book = { path = "../../crypto-n-rust/src/libs/book" }
paste = "1.0"
serde_json = "1.0.150"
serde_with = "3.0"
serde = { version = "1.0", features = ["derive"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(tarpaulin_include)'
]

