[package]
name = "quizzes"
version = "0.1.0"
edition = "2024"

[lib]
name = "quizzes"
path = "src/quizzes.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

chrono = "0.4.38"
csv = "1.0"
futures = "0.3.31"
paste = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
serde_with = "3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

libs = { path = "../libs" }
book = { path = "../../crypto-n-rust/src/libs/book" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(tarpaulin_include)'
]

