[package]
name = "quizzes"
version = "0.1.0"
edition = "2024"

[lib]
name = "quizzes"
path = "src/quizzes.rs"

[dependencies]
clap = { version = "4.6.4", features = ["derive", "env"] }

toml = "1.1.3"
chrono = "0.4.45"
csv = "1.0"
futures = "0.3.33"
paste = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.151"
serde_with = "3.0"
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../libs" }
book = { path = "../../crypto-n-rust/src/libs/book" }
ethers = { version = "2.0.14", default-features = false, features = ["rustls"] }
rpassword = "7.5.4"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(tarpaulin_include)'
]
