[package]
name = "appender"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "appender"
path = "../../quizzes/src/quiz08/c_appender/src/main.rs"

[dependencies]
tokio = { version = "1.51.3", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../libs" }
book = { path = "../../../crypto-n-rust/src/libs/book" }
quizzes = { path = "../../quizzes" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }


