[package]
name = "assets"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "assets"
path = "../../quizzes/quiz06/src/b_pools/src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../libs" }

book = { path = "../../../crypto-n-rust/src/libs/book" }

quizzes = { path = "../../quizzes" }
