[package]
name = "chihuahua"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chihuahua"
path = "../../quizzes/quiz02/b_compute_close/src/main.rs"

[dependencies]
chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../libs" }

book = { path = "../../../crypto-n-rust/src/libs/book" }
