[package]
name = "dawn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dawn"
path = "../../quizzes/src/quiz06/a_pool_table/src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../libs" }

book = { path = "../../../crypto-n-rust/src/libs/book" }

quizzes = { path = "../../quizzes" }
