[package]
name = "distributed"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "distributed"
path = "../../quizzes/src/quiz11/b_distributed/src/main.rs"

[dependencies]
book = { path = "../../../crypto-n-rust/src/libs/book" }
quizzes = { path = "../../quizzes" }

teloxide   = { version = "0.17.0", features = ["macros"] }
tokio      = { version = "1.52.3", features = ["full"] }
reqwest    = { version = "0.13.3", features = ["json"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
