[package]
name = "dusk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dusk"
path = "../../quizzes/quiz05/a_assets/src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../libs" }

book = { path = "../../../crypto-n-rust/src/libs/book" }

