[package]
name = "pools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pools"
path = "../../quizzes/src/quiz10/b_pools/src/main.rs"

[dependencies]
chrono = "0.4.38"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

book = { path = "../../../crypto-n-rust/src/libs/book" }

quizzes = { path = "../../quizzes" }
libs = { path = "../../libs" }

