[package]
name = "close"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "close"
path = "../../quizzes/src/quiz08/b_urie/src/main.rs"

[dependencies]
tokio = { version = "1.51.2", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../libs" }

book = { path = "../../../crypto-n-rust/src/libs/book" }

quizzes = { path = "../../quizzes" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
