[package]
name = "basset"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "basset"
path = "../../../quizzes/src/quiz03/b_aggregate/src/main.rs"

[dependencies]
chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../../libs" }

book = { path = "../../../../crypto-n-rust/src/libs/book" }

quizzes = { path = "../../../quizzes" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

