[package]
name = "pivots"
version = "0.1.0"
edition = "2024"

[lib]
name = "pivots"
path = "src/lib.rs"

[dependencies]

## You may need to use the below libraries in your app

# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# book = { path = "../../../../crypto-n-rust/src/libs/book" }

