[package]
name = "b_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

libs = { path = "../../../libs" }

book = { path = "../../../../crypto-n-rust/src/libs/book" }

