[package]
name = "quiz03"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

book = { path = "../../../../crypto-n-rust/src/libs/book" }
libs = { path = "../../../libs" }
quizzes = { path = "../.." }
