[package]
name = "quiz04"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

book = { path = "../../../../crypto-n-rust/src/libs/book" }
libs = { path = "../../../libs" }
quizzes = { path = "../.." }
