[package]
name = "quiz11"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "reinvest"
path = "a_reinvest/src/main.rs"

[dependencies]
book = { path = "../../../../../crypto-n-rust/src/libs/book" }
quizzes = { path = "../.." }

tokio = { version = "1.52.3", features = ["full"] }
teloxide = { version = "0.17.0", features = ["macros"] }
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
