[package]
name = "e_committed"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0"
chrono = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

libs = { path = "../../../../libs" }

book = { path = "../../../../../crypto-n-rust/src/libs/book" }

quizzes = { path = "../../.." }

